--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
 		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
 		<dependency>
 			<groupId>org.mockito</groupId>
-			<artifactId>mockito-core</artifactId>
+			<artifactId>mockito-inline</artifactId>
 			<version>4.6.1</version>
 			<scope>test</scope>
 		</dependency>
